// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing Page matches snapshot with blog posts 1`] = `
<div>
  <div
    data-testid="helmet"
  >
    <title>
      Personal Blog
    </title>
    <meta
      content="This is my cool blog."
      name="description"
    />
  </div>
  <div
    data-testid="topbar"
  >
    Topbar
  </div>
  <div
    style="margin-top: 20px; margin-bottom: 40px;"
  >
    <div
      xs="12"
    >
      <div
        center="xs"
      >
        <div
          lg="7"
          md="8"
          sm="10"
          xs="11"
        >
          <div>
            <h3
              class="jsx-510830267 "
              style="margin-bottom: 20px;"
            >
              Recent Posts
            </h3>
          </div>
          <div
            style="margin-bottom: 20px;"
          >
            <a
              class="jsx-2023000637 link  "
              href="/test-post-1"
              style="width: 100%;"
            >
              <div
                class="jsx-2942312965 card "
                style="padding: 15px;"
              >
                <div
                  class="jsx-355899491 content "
                >
                  <div
                    middle="xs"
                  >
                    <div
                      sm="4"
                      xs="12"
                    >
                      <img
                        alt="Test Post 1"
                        src="https://example.com/image1.png"
                        style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px;"
                      />
                    </div>
                    <div
                      sm="8"
                      style="padding-left: 15px;"
                      xs="12"
                    >
                      <div>
                        <h4
                          class="jsx-2019007676 "
                          style="margin-bottom: 8px;"
                        >
                          Test Post 1
                        </h4>
                      </div>
                      <div
                        style="margin-bottom: 8px;"
                      >
                        <span
                          class="jsx-3220321788 "
                          style="margin: 0px 5px 5px 0px;"
                        >
                          React
                        </span>
                        <span
                          class="jsx-3220321788 "
                          style="margin: 0px 5px 5px 0px;"
                        >
                          JavaScript
                        </span>
                      </div>
                      <div>
                        <small
                          class="jsx-1231261695 "
                          style="line-height: 1.5;"
                        >
                          First test post excerpt
                        </small>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </a>
          </div>
          <div
            style="margin-bottom: 20px;"
          >
            <a
              class="jsx-2023000637 link  "
              href="/test-post-2"
              style="width: 100%;"
            >
              <div
                class="jsx-2942312965 card "
                style="padding: 15px;"
              >
                <div
                  class="jsx-355899491 content "
                >
                  <div
                    middle="xs"
                  >
                    <div
                      sm="4"
                      xs="12"
                    >
                      <img
                        alt="Test Post 2"
                        src="https://example.com/image2.png"
                        style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px;"
                      />
                    </div>
                    <div
                      sm="8"
                      style="padding-left: 15px;"
                      xs="12"
                    >
                      <div>
                        <h4
                          class="jsx-2019007676 "
                          style="margin-bottom: 8px;"
                        >
                          Test Post 2
                        </h4>
                      </div>
                      <div
                        style="margin-bottom: 8px;"
                      >
                        <span
                          class="jsx-3220321788 "
                          style="margin: 0px 5px 5px 0px;"
                        >
                          TypeScript
                        </span>
                      </div>
                      <div>
                        <small
                          class="jsx-1231261695 "
                          style="line-height: 1.5;"
                        >
                          Second test post excerpt
                        </small>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Page matches snapshot with no blog posts 1`] = `
<div>
  <div
    data-testid="helmet"
  >
    <title>
      Personal Blog
    </title>
    <meta
      content="This is my cool blog."
      name="description"
    />
  </div>
  <div
    data-testid="topbar"
  >
    Topbar
  </div>
  <div
    style="margin-top: 20px; margin-bottom: 40px;"
  >
    <div
      xs="12"
    >
      <div
        center="xs"
      >
        <div
          lg="7"
          md="8"
          sm="10"
          xs="11"
        >
          <div>
            <h3
              class="jsx-510830267 "
              style="margin-bottom: 20px;"
            >
              Recent Posts
            </h3>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
